# calculator

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  calculator.env.example  docker-compose.yml  nsjail.cfg  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  executor.py  main.py  parser.py  ratelimit.py  usage_logger.py
deploy/: certbot-renew-hook.sh
tests/: conftest.py  fake_magma.py  test_config.py  test_executor.py  test_integration.py  test_main.py  test_parser.py  test_ratelimit.py  test_usage_logger.py
traefik/: .env.example  docker-compose.yml
