[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "Magma Calculator Service"
authors = ["Edgar Costa"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
pydantic-settings = "^2.12.0"
uvicorn = {version = "^0.40.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
